--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href={{url_for('static',filename='styles.css')}}>
+<!--     <link rel="stylesheet" href={{url_for('static',filename='styles.css')}}> -->
+    <link rel="stylesheet" href="styles.css" >
 
     
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
